        - .disasm() routine now returns "[UNKNOWN]" when unable to process instruction.
        - Added get_register() routine to compliment set_register().
        - Fixed handle leak in addr_to_module().
        - Added warning about handle leaks when break-ing out of iterate_xxx() routines.
    pydasm:
        - Bundled new version of pydasm which manually fixes a memory leak that was affecting PaiMei.


09.13.2006 [REV 122]
    docs:
        - Fixed bug in PyDbg snippet example.
        - Added basic documentation for public-release FileFuzz GUI module.
    pida:
        - Fixed bugs in rendering of GML graphs.
    gui.filefuzz:
        - Added multi-byte modifications feature.
        - Fixed bug in statistic tracking.
    heap_trace:
        - Added tool for heap alloc/free tracking, useful for finding heap spray / memory leak vectors.
    pida:
        - wx is not longer a mandatory requirement for using the PIDA module.
    gui.pstalker:
        - Implemented CLI option to "watch for" and attach to a target process.
    pydbg:
        - Fixed handle leaks in load() routine.
        - Fixed handle leaks in pydbg_core.
        - Implemented hide_debugger() routine to hide from IsDebuggerPresent().
        - Replaced various instances of DBG_CONTINUE with the more approriate DBG_EXCEPTION_NOT_HANDLED, this fix allows
          for improved handling of debugging files with anti-debugging functionality.
        - Fixed bug where breakpoints deleted from their own handler were still being restored.
        - Added page_guard_clear() and page_guard_restore() functionality. This is useful for suspending memory
          breakpoints to single step past a REP instruction.
        - Added optional string 'prefix' argument to hex_dump() for customizing generated dumps.
        - Removed assumption from func_resolve_debuggee() that all DLLs end in ".dll" (ie: QuickTime: .qts/.qtx)
        - Replaced usage of '\\' with os.sep in system_dll.py.